--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,18 @@
   "description": "api for ecommerce web app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "start:prod": "NODE_ENV=production node server.js"
   },
   "author": "Ian Githungo",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
