--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "html-to-text": "^8.0.0",
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
+    "pug": "^3.0.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
