--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "html-to-text": "^8.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
